# WiFiTAD

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
TAD/: config.py
TAD/evaluation/: eval_detection.py
TAD/model/: encoder.py  feature_extractor.py  loss.py  modules1.py  modules2.py  network.py  prediction_head.py
TAD/train_tools/: tools.sh
TAD/utils/: device.py  eval.py  test.py  train.py
TALFi.egg-info/: PKG-INFO  SOURCES.txt
TALFi/ablation_study/: THAT.py  backbone222.py  resnet1d.py
TALFi/ablation_study/layers/: SelfAttention_Family.py
TALFi/dataset/: Classify_dataloader.py  smartwifi_dataset.py
TALFi/evaluation/: eval_detection.py
TALFi/modeling/: atten.py  backbone.py  detection.py  embedding.py  encoder.py  ku2.py  meat_model.py  meat_model2.py  meta_model2.py  model3.py  module3.py  multi_losses.py  multi_temporal_pyramid.py  pyramid3.py
TALFi/train_tools/: SlideWindow.sh  TALFi.sh
TALFi/utils/: eval.py  test_SL.py  test_TALFi.py  train_SL.py  train_TALFi.py
configs/: SL.yaml  TALFi.yaml  WiFiTAD.yaml
